# build-yourself-rust

./: Cargo.toml
src/: main.rs
src/api/: byob.rs  mod.rs  task.rs  user.rs
src/aws/: mod.rs  s3.rs  secrets.rs
src/model/: moralis.rs  nft.rs  secrets.rs  task.rs  user.rs
src/repository/: mongodb.rs
