[package]
name = "ActixWebTaskService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-s3 = "0.24.0"
aws-sdk-secretsmanager = "0.24.0"
env_logger = "0.10.0"
log = "0.4.17"
rusoto_core = "0.48.0"
rusoto_secretsmanager = "0.48.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
structopt = "0.3.26"
strum = "0.24.1"
strum_macros = "0.24.3"
uuid = "1.3.0"
